# emotescli

./: Cargo.toml
src/: config.rs  dispatcher.rs  lib.rs  main.rs
src/actions/: config.rs  emote.rs  mod.rs  namespace.rs  user.rs
src/types/: emote.rs  mod.rs  namespace.rs  user.rs
