[package]
name = "emotes"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
license = "MIT"
description = "Upload files to your emotes server of choice with this CLI tool."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7" , features = ["blocking", "json"] }
directories = "3.0"
json = "0.12.4"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
keyring = "0.9.0"
read_input = "0.8.4"
mime_guess = "2.0.3"
structopt = "0.3.21"
